name:
  zenacy-html
version:
  1.0.0
synopsis:
  A standard compliant HTML parser
description:
  Please see README.md
homepage:
  http://zenacy.app/
license:
  Zenacy
license-file:
  LICENSE
author:
  Michael Williams <mlcfp@icloud.com>
maintainer:
  Michael Williams <mlcfp@icloud.com>
copyright:
  Copyright (C) Zenacy Reader Technologies LLC
category:
  Web
build-type:
  Simple
cabal-version:
  >=1.10
extra-source-files:
  README.md CHANGES.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Zenacy.HTML
    , Zenacy.HTML.Internal.BS
    , Zenacy.HTML.Internal.Buffer
    , Zenacy.HTML.Internal.Char
    , Zenacy.HTML.Internal.Core
    , Zenacy.HTML.Internal.DOM
    , Zenacy.HTML.Internal.Entity
    , Zenacy.HTML.Internal.HTML
    , Zenacy.HTML.Internal.Image
    , Zenacy.HTML.Internal.Lexer
    , Zenacy.HTML.Internal.Oper
    , Zenacy.HTML.Internal.Parser
    , Zenacy.HTML.Internal.Render
    , Zenacy.HTML.Internal.Token
    , Zenacy.HTML.Internal.Trie
    , Zenacy.HTML.Internal.Types
    , Zenacy.HTML.Internal.Zip
    , Zenacy.HTML.Query
  build-depends:
    base == 4.*
    , bytestring
    , containers
    , data-default
    , dlist
    , extra
    , mtl
    , pretty-show
    , safe
    , safe-exceptions
    , text
    , transformers
    , vector
    , word8
  ghc-options:
    -- -O3 -Wall
    -O3
  default-extensions:
  default-language:
    Haskell2010

executable zenacy-html-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  other-modules:
  ghc-options:
    -O3 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base == 4.*
    , bytestring
    , containers
    , data-default
    , dlist
    , extra
    , pretty-show
    , text
    , vector
    , zenacy-html
  default-extensions:
  default-language:
    Haskell2010

test-suite zenacy-html-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    TestSuite.hs
  build-depends:
    base == 4.*
    , bytestring
    , containers
    , data-default
    , dlist
    , extra
    , HUnit
    , mtl
    , pretty-show
    , raw-strings-qq
    , test-framework
    , test-framework-hunit
    , text
    , transformers
    , zenacy-html
  default-extensions:
  ghc-options:
    -O3 -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  other-modules:
    Zenacy.HTML.Internal.Buffer.Tests
    , Zenacy.HTML.Internal.Entity.Tests
    , Zenacy.HTML.Internal.HTML.Tests
    , Zenacy.HTML.Internal.Image.Tests
    , Zenacy.HTML.Internal.Lexer.Tests
    , Zenacy.HTML.Internal.Oper.Tests
    , Zenacy.HTML.Internal.Parser.Tests
    , Zenacy.HTML.Internal.Token.Tests
    , Zenacy.HTML.Internal.Trie.Tests
    , Zenacy.HTML.Internal.Zip.Tests
    , Zenacy.HTML.Query.Tests

benchmark zenacy-html-bench
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    BenchMain.hs
  build-depends:
    base == 4.*
    , bytestring
    , containers
    , data-default
    , dlist
    , criterion
    , pretty-show
    , raw-strings-qq
    , text
    , zenacy-html
  default-extensions:
  ghc-options:
    -O3 -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  other-modules:
